--- a/src/add.html
+++ b/src/add.html
@@ -3,47 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alta trabajador/a</title>
+    <title>CRUD de Pokémon</title>
 </head>
     
 <body>
 <div>
-	<header>
-		<h1>Panel de control</h1>
-	</header>
-	<main>				
-	<ul>
-		<li><a href="index.php">Inicio</a></li>
-		<li><a href="add.html">Alta</a></li>
-	</ul>
-	<h2>Alta trabajador/a</h2>
+    <header>
+        <h1>Panel de control</h1>
+    </header>
+    <main>                
+        <ul>
+            <li><a href="index.php">Inicio</a></li>
+            <li><a href="add.php">Agregar Pokémon</a></li>
+        </ul>
+        <h2>Alta Pokémon</h2>
 
-	<form action="add.php" method="post">
-		<div>
-			<label for="name">Nombre</label>
-			<input type="text" name="name" id="name" placeholder="nombre" required>
-		</div>
+        <form action="add.php" method="post">
+            <div>
+                <label for="name">Nombre</label>
+                <input type="text" name="name" id="name" placeholder="Nombre" required>
+            </div>
 
-		<div>
-			<label for="surname">Apellido</label>
-			<input type="text" name="surname" id="surname" placeholder="apellido" required>
-		</div>
+            <div>
+                <label for="type">Tipo</label>
+                <input type="text" name="type" id="type" placeholder="Tipo" required>
+            </div>
 
-		<div>
-			<label for="age">Edad</label>
-			<input type="number" name="age" id="age" placeholder="edad" required>
-		</div>
+            <div>
+                <label for="generation">Generación</label>
+                <input type="number" name="generation" id="generation" placeholder="Generación" required>
+            </div>
 
-		<div>
-			<input type="submit" name="inserta" value="Agregar">
-			<input type="button" value="Cancelar" onclick="location.href='index.php'">
-		</div>
-	</form>
-	
-	</main>	
-	<footer>
-	Created by the IES Miguel Herrero team &copy; 2024
-  	</footer>
+            <div>
+                <label for="height">Altura</label>
+                <input type="number" name="height" id="height" placeholder="Altura" required>
+            </div>
+
+            <div>
+                <label for="weight">Peso</label>
+                <input type="number" name="weight" id="weight" placeholder="Peso" required>
+            </div>
+
+            <div>
+                <input type="submit" name="inserta" value="Agregar">
+                <input type="button" value="Cancelar" onclick="location.href='index.php'">
+            </div>
+        </form>
+        
+    </main>    
+    <footer>
+        Created by the IES Miguel Herrero team &copy; 2024
+    </footer>
 </div>
 </body>
 </html>
