--- a/src/add.html
+++ b/src/add.html
@@ -30,18 +30,18 @@
             </div>
 
             <div>
-                <label for="generation">Generación</label>
-                <input type="number" name="generation" id="generation" placeholder="Generación" required>
+                <label for="generation">Nivel</label>
+                <input type="number" name="level" id="level" placeholder="Nivel" required>
             </div>
 
             <div>
-                <label for="height">Altura</label>
-                <input type="number" name="height" id="height" placeholder="Altura" required>
+                <label for="trainer">Entrenador</label>
+                <input type="text" name="trainer" id="trainer" placeholder="Entrenador" required>
             </div>
 
             <div>
-                <label for="weight">Peso</label>
-                <input type="number" name="weight" id="weight" placeholder="Peso" required>
+                <label for="region">Region</label>
+                <input type="text" name="region" id="region" placeholder="Region" required>
             </div>
 
             <div>
