--- a/src/add.html
+++ b/src/add.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD de Pokémon</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"  crossorigin="anonymous">
 </head>
     
 <body>
@@ -19,34 +20,34 @@
         <h2>Alta Pokémon</h2>
 
         <form action="add.php" method="post">
-            <div>
+            <div class="form-group">
                 <label for="name">Nombre</label>
-                <input type="text" name="name" id="name" placeholder="Nombre" required>
+                <input type="text"  class="form-control" name="name" id="name" placeholder="Nombre" required>
             </div>
 
-            <div>
+            <div class="form-group"> 
                 <label for="type">Tipo</label>
-                <input type="text" name="type" id="type" placeholder="Tipo" required>
+                <input type="text" class="form-control" name="type" id="type" placeholder="Tipo" required>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="generation">Nivel</label>
-                <input type="number" name="level" id="level" placeholder="Nivel" required>
+                <input type="number" class="form-control" name="level" id="level" placeholder="Nivel" required>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="trainer">Entrenador</label>
-                <input type="text" name="trainer" id="trainer" placeholder="Entrenador" required>
+                <input type="text" class="form-control" name="trainer" id="trainer" placeholder="Entrenador" required>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="region">Region</label>
-                <input type="text" name="region" id="region" placeholder="Region" required>
+                <input type="text" class="form-control" name="region" id="region" placeholder="Region" required>
             </div>
 
-            <div>
-                <input type="submit" name="inserta" value="Agregar">
-                <input type="button" value="Cancelar" onclick="location.href='index.php'">
+            <div class="form-group">
+                <input type="submit" name="inserta" value="Agregar" class="form-control">
+                <input type="button" value="Cancelar" class="form-control" onclick="location.href='index.php'">
             </div>
         </form>
         
